--- a/src/shared/Header/views/BurgerMenu/BurgerMenu.scss
+++ b/src/shared/Header/views/BurgerMenu/BurgerMenu.scss
@@ -115,6 +115,7 @@ $burger-search-background-color: var(--burger-search-background-color);
         }
 
         #{$root}__search {
+            display: none;
             padding: 12px;
 
             #{$root}__input {
@@ -136,7 +137,7 @@ $burger-search-background-color: var(--burger-search-background-color);
         }
 
         #{$root}__tree { 
-            @include mixins.sidebar(calc(100vh - 406px));
+            @include mixins.sidebar(calc(100vh - 318px));
             width: 100% !important;
             padding-top: 0;
             padding-right: 16px;
