--- a/src/shared/OverviewBlock/OverviewBlock.scss
+++ b/src/shared/OverviewBlock/OverviewBlock.scss
@@ -3,6 +3,10 @@
 .OverviewBlock {
   padding: 40px 80px;
 
+  &__title {
+    margin-top: 0 !important;
+  }
+
   &__description {
     margin-bottom: 40px;
     max-width: 792px;
