Style changes for adaptive

--- a/src/routes/DocsPage/DocsPage.scss
+++ b/src/routes/DocsPage/DocsPage.scss
@@ -8,6 +8,7 @@
     &__sidebar {
         @include mixins.sidebar(100vh);
 
+
         @media (max-width: 1442px) {
             width: 272px;
             min-width: 272px;
@@ -26,6 +27,16 @@
         }
 
         .TreeView__item {
+            width: 300px;
+
+            @media (max-width: 1442px){
+                width: 240px;
+            }
+
+            @media (max-width: variables.$tablet-width-small){
+                  width: 200px;
+            }
+
             &_has-items:not(.TreeView__item_level_1):not(:first-child) .TreeView__item-label {
                 margin-top: 16px;
             }
@@ -39,14 +50,5 @@
 
     &__content {
         width: 100%;
-    }
-
-    //Все адаптивы для демок
-    .DemoCard__content {
-        //Accordion
-        .AccordionItemView {
-            width: 100%;
-            max-width: 480px;
-        }
     }
 }
