--- a/src/routes/DocsPage/views/UiComponentInfo/views/DemoCard/DemoCard.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/DemoCard/DemoCard.scss
@@ -7,10 +7,12 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        margin-bottom: 32px;
     }
 
     &__title {
-      margin-bottom: 32px;
+        margin-bottom: 0;
     }
 
     &__link { 
