--- a/src/shared/Layout/Layout.scss
+++ b/src/shared/Layout/Layout.scss
@@ -5,17 +5,58 @@
     display: flex;
     flex-flow: column nowrap;
     min-height: 100vh;
-    
+
     header {
-		flex: 0 0 auto;
-	}
+        flex: 0 0 auto;
+    }
 
-	main {
-		flex: 1 0 auto;
-	}
+    main {
+        flex: 1 0 auto;
+    }
 
-	footer {
-		flex: 0 0 auto;
-	}
+    footer {
+        flex: 0 0 auto;
+    }
 }
 
+.Portal {
+    @media (max-width: variables.$mobile-width) {
+        .DateFieldView__dropdown {
+            transform: scale(0.8) translateY(-30px);
+            right: auto !important;
+        }
+    }
+
+    @media (max-width: variables.$mobile-width-small) {
+        .DateFieldView__dropdown {
+            transform: scale(0.8) translateY(-40px) translateX(-42px);
+        }
+    }
+
+    .DateTimeFieldView__dropdown {
+        @media (max-width: 520px) {
+            transform: scale(0.8) translateY(-30px);
+        }
+        @media (max-width: 440px) {
+            transform: scale(0.8) translateY(-30px) translateX(-40px);
+        }
+
+        @media (max-width: 405px) {
+            transform: scale(0.8) translateY(-30px) translateX(60px);
+        }
+    }
+
+    .DateRangeFieldView__split {
+        @media (max-width: 800px) {
+            .DayPicker-Months {
+                flex-flow: column nowrap;
+
+                &::before {
+                    width: 100%;
+                    height: 2px;
+                    top: 50%
+                }
+            }
+        }
+    }
+}
