--- a/src/ui/list/List/demo/list.scss
+++ b/src/ui/list/List/demo/list.scss
@@ -1,30 +1,27 @@
-@use 'style/variables';
+@use "style/variables";
 
-.list-group { 
-
-    &-item { 
+.list-group {
+    &-item {
         padding: 5px 10px;
         border-bottom: 1px solid variables.$element-border-color;
 
-        &:last-child{
+        &:last-child {
             border: none;
         }
     }
 }
 
-.row { 
+.row {
     display: flex;
     flex-flow: row wrap;
-    column-gap: 10px;
-    row-gap: 10px;
+    gap: 10px;
 }
 
-
-.col-12 { 
+.col-12 {
     width: 100%;
-    
 }
 
 .col-6 {
     width: calc(100% / 6);
+    min-width: 86px;
 }
