--- a/src/routes/IndexPage/views/FeaturesSection/views/FeatureCard/FeatureCard.scss
+++ b/src/routes/IndexPage/views/FeaturesSection/views/FeatureCard/FeatureCard.scss
@@ -56,8 +56,8 @@
         }
 
         svg {
-            width: 100%;
-            height: 100%;
+            width: 85px;
+            height: 85px;
         }
     }
 
