--- a/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
+++ b/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
@@ -42,8 +42,8 @@
         transform: translateY(3px);
 
         svg {
-            width: 100%;
-            height: 100%;
+            width: 65px;
+            height: 28px;
         }
 
         @media (max-width: variables.$mobile-width-small) {
