Fix themes button

--- a/src/shared/Header/Header.scss
+++ b/src/shared/Header/Header.scss
@@ -34,7 +34,9 @@
         transition: opacity 150ms ease-in-out;
 
         @media (max-width: 748px) {
-            display: none;
+            &-input, &-languages {
+              display: none;
+            }
         }
 
         .FieldLayoutView {
