--- a/src/routes/DocsPage/views/UiComponentInfo/views/Banner/Banner.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/Banner/Banner.scss
@@ -64,7 +64,8 @@ $banner-frame-background-color: var(--banner-frame-background-color);
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-
+            width: calc(100% - 120px);
+         
             @media (max-width: variables.$tablet-width) {
                 font-size: variables.$font-size-64;
                 line-height: variables.$line-height-80;
