--- a/src/routes/DocsPage/views/GettingStarted/views/GettingStartedOverview/GettingStartedOverview.scss
+++ b/src/routes/DocsPage/views/GettingStarted/views/GettingStartedOverview/GettingStartedOverview.scss
@@ -1,5 +1,35 @@
-@use 'style/variables';
+@use "style/variables";
 
 .GettingStartedOverview {
+    .OverviewItem .CardView {
+        border-radius: 12px;
+        position: relative;
+        &__cover {
+            position: absolute;
+            height: 100%;
+        }
 
+        &__content {
+            padding: 12px;
+            margin-top: auto;
+            &-inner { 
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+
+        &__title {
+            font-size: variables.$font-size-16;
+            font-weight: variables.$font-weight-sm;
+            line-height: variables.$line-height-22;
+            color: #fff;
+        }
+    }
+
+
+    .ListView__content { 
+        max-width: 1020px;
+    }
 }
