--- a/src/shared/Header/views/BurgerMenu/BurgerMenu.scss
+++ b/src/shared/Header/views/BurgerMenu/BurgerMenu.scss
@@ -57,7 +57,7 @@ $burger-search-background-color: var(--burger-search-background-color);
         z-index: 13;
         width: 100vw;
         overflow: hidden;
-        height: calc(100% - 64px);
+        height: calc(100vh - 64px);
         position: absolute;
         pointer-events: none;
         top: 64px;
